# quicklib

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
src/: demo_ut.cpp  library.cpp  library.hpp
